# dEngine

./: .gitignore  .gitmodules  BOCCHI.dds  CMakeLists.txt  HITORIBOCCHI.dds  Makefile  README.md  TODO.txt  bocchitest2.dds  boccho.DDS  boccho2.DDS  boccholmao.dds  dEngine  dEngine.sln  dEngine.vcxproj  dEngine.vcxproj.filters  fragmentShader.fragmentShader  glad.c  main.cpp  maintwo.cpp  shader.hpp  shader_s.cpp  simpleFragmentShader.frag  simpleVertexShader.vert  vertexShader.vertexShader
assets/shaders/: gradient.comp  gradient_color.comp
common/: camera.cpp  objloader.hpp  shader_s.cpp  shader_s.h  texture.cpp  vboindexer.hpp
include/renderer/: Vulkan.h  VulkanDescriptors.h  VulkanEngine.h  VulkanImages.h  VulkanInitializer.h  VulkanPipelines.h  VulkanTypes.h
include/shader/: shader_s.h
shaders/: lighting.frag  lighting.vert
src/: camera.h  controls.cpp  main.cpp  mesh.h  mesh_2.h  model.h  model_2.h  objloader.cpp  shader.cpp  shader.hpp  shader_s.cpp  texture.hpp
src/common/: Camera.cpp  Camera.h
src/renderer/: Vulkan.cpp  VulkanDescriptors.cpp  VulkanEngine.cpp  VulkanImages.cpp  VulkanInitializer.cpp  VulkanPipelines.cpp
x64/Debug/: dEngine.exe.recipe  dEngine.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/dEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  dEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
